# test_juce_with_cmake

./: .gitignore  CMakeLists.txt  README.md  reorganize_project.ps1
include/: PluginEditor.h
src/: PluginEditor.cpp  PluginProcessor.cpp
